--- a/decoder/build.gradle
+++ b/decoder/build.gradle
@@ -1,8 +1,34 @@
 plugins {
     id 'com.android.library'
+    id 'maven-publish'
 }
-// 版本号
-version = '1.0.1'
+// Because the components are created only during the afterEvaluate phase, you must
+// configure your publications using the afterEvaluate() lifecycle method.
+afterEvaluate {
+    publishing {
+        publications {
+            // Creates a Maven publication called "release".
+            release(MavenPublication) {
+                // Applies the component for the release build variant.
+                from components.release
+
+                // You can then customize attributes of the publication as shown below.
+                groupId = 'com.mhz.silkconvert'
+                artifactId = 'final'
+                version = '1.0'
+            }
+            // Creates a Maven publication called “debug”.
+            debug(MavenPublication) {
+                // Applies the component for the debug build variant.
+                from components.debug
+
+                groupId = 'com.mhz.silkconvert'
+                artifactId = 'final-debug'
+                version = '1.0'
+            }
+        }
+    }
+
 android {
 
     compileSdkVersion 30
